# dendy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conandata.yml  vcpkg.json
.github/workflows/: main.yml
src/: .clang-tidy  CMakeLists.txt
src/dendy_sdl/: icon16.hpp  main.cpp
src/libnes/: cartridge.hpp  clock.hpp  color.hpp  console.hpp  cpu.cpp  cpu.h  cpu.hpp  cpu_address_modes.hpp  cpu_operations.hpp  cpu_registers.hpp  literals.hpp  mos6502.cpp  mos6502.h  ppu.cpp  ppu.hpp  ppu_crt_scan.hpp  ppu_name_table.hpp  ppu_object_attribute_memory.hpp  ppu_palette_table.hpp  ppu_pattern_table.hpp  ppu_registers.hpp  screen.hpp
src/libnes/mappers/: mmc1.hpp  nrom.hpp
src/nemo_sdl/: icon16.hpp  main.cpp
test/: CMakeLists.txt  cpu.cpp  cpu_test.cpp
test/integration_tests/: nestest.cpp
test/unit_tests/: bus_test.cpp  clock_test.cpp  cpu_test.cpp  mmc1_test.cpp  ppu_crt_scan_test.cpp  ppu_name_table_test.cpp  ppu_oam_test.cpp  ppu_palette_table_test.cpp  ppu_pattern_table_test.cpp  ppu_registers_test.cpp  ppu_test.cpp
tools/: CMakeLists.txt  grab_ppu_registers.cpp
